# course_work

./: .gitignore  README.md  db-setup.sql  reset.sql
client/: CMakeLists.txt
client/include/: DataContainer.h  QueryBuilder.h  RequestManager.h
client/include/model/: Chat.h  Message.h  User.h
client/include/model/interface/: Serializable.h
client/src/: QueryBuilder.cpp  RequestManager.cpp  main.cpp
client/ui/: LoginWindow.qml  MainWindow.qml
client/ui/main_window/: Header.qml  SideBar.qml
client/ui/main_window/header/: ConfigLine.qml  HMenu.qml  Info.qml
client/ui/main_window/header/info/: Logo.qml  Profile.qml  SwitchButton.qml
client/ui/main_window/header/menu/: CategoryItem.qml
client/ui/qml/: LoginWindow.qml  MainWindow.qml  RegisterWindow.qml  default.qml  main.qml
client/ui/qml/components/: AddChatForm.qml  BlockListForm.qml  ChatBlock.qml  ChatsList.qml  InfoPanel.qml  MessageBlock.qml  MessageHistory.qml  SearchChatForm.qml  SendMessageForm.qml
server/: CMakeLists.txt  conanfile.txt
server/include/: MainHTTPServer.h  RequestHandlerFactory.h  conf.h
server/include/AR/: ChatAR.h  Connection.h  MessageAR.h  UserAR.h
server/include/exception/: UserBlockingException.h  UserDuplicateException.h  UserNotFoundException.h  VerificationException.h
server/include/handler/: RegisterRequestHandler.h  RequestHandler.h  UserRequestHandler.h
server/include/model/: Chat.h  Message.h  User.h
server/include/model/interface/: Serializable.h
server/include/service/: RegVerificator.h
server/res/: cert.crt  key.key
server/src/: MainHTTPServer.cpp  RequestHandlerFactory.cpp  main.cpp
server/src/AR/: ChatAR.cpp  Connection.cpp  MessageAR.cpp  UserAR.cpp
server/src/exception/: UserBlockingException.cpp  UserDuplicateException.cpp  UserNotFoundException.cpp  VerificationException.cpp
server/src/handler/: RegisterRequestHandler.cpp  UserRequestHandler.cpp
server/src/model/: Chat.cpp  Message.cpp  User.cpp
server/src/service/: RegVerificator.cpp
